add new details

--- a/app/src/main/res/layout/activity_tabs_main.xml
+++ b/app/src/main/res/layout/activity_tabs_main.xml
@@ -12,7 +12,7 @@
         android:paddingHorizontal="2dp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/gradient_background"
+        android:background="#923E5D"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -72,7 +72,7 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient_background"
+        android:background="#923E5D"
         app:tabIndicatorColor="@color/teal_200"
         app:tabSelectedTextColor="@color/teal_200"
         app:tabMode="scrollable"
