--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="50dp"/>
-    <solid android:color="@color/purple_500"/>
+    <solid android:color="#4C1090"/>
     <padding android:left="16dp" android:right="16dp"/>
 </shape>
