--- a/app/src/main/res/layout/activity_google_sign_in.xml
+++ b/app/src/main/res/layout/activity_google_sign_in.xml
@@ -1,19 +1,27 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
+    tools:context=".GoogleSignInActivity"
+    >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".GoogleSignInActivity">
+    android:orientation="vertical"
+   >
 
     <!-- App Icon (Loaded with Glide in Java) -->
     <ImageView
         android:id="@+id/app_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/icon"
+        android:src="@drawable/icon_background"
         android:scaleType="centerInside"/>
 
 
@@ -24,6 +32,16 @@
         android:layout_height="wrap_content"
         android:text="Zuula App"
         android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_marginBottom="30dp"/>
+
+    <TextView
+        android:id="@+id/text__"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Find what's lost, fast."
+        android:textSize="12sp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_marginBottom="30dp"/>
@@ -51,4 +69,13 @@
         android:visibility="gone"
         android:layout_gravity="center"/>
 
+
 </LinearLayout>
+    <!-- Overlay to dim the background -->
+    <View
+        android:id="@+id/dimOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#2C2B2B"
+        android:visibility="gone" />
+</RelativeLayout>
