--- a/app/src/main/res/layout/activity_item_detail_my.xml
+++ b/app/src/main/res/layout/activity_item_detail_my.xml
@@ -11,11 +11,13 @@
         android:paddingHorizontal="2dp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/gradient_background"
+        android:background="#923E5D"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-        <RelativeLayout
+
+
+              <RelativeLayout
 
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -65,14 +67,21 @@
 
 
         </RelativeLayout>
+
+
     </androidx.appcompat.widget.Toolbar>
+<ScrollView
+android:layout_width="match_parent"
+    android:id="@+id/ss1"
+    android:layout_below="@id/toolbar"
+
+    android:layout_height="match_parent">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:layout_below="@id/toolbar"
        android:id="@+id/l1"
         android:orientation="vertical"
         >
@@ -136,8 +145,9 @@
 
     </LinearLayout>
 
+</ScrollView>
     <RelativeLayout
-        android:layout_below="@id/l1"
+        android:layout_below="@id/ss1"
 
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
@@ -145,5 +155,7 @@
         android:layout_height="wrap_content">
 
     </RelativeLayout>
+
+
 
 </RelativeLayout>
