--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -2,6 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="#D9D9D9"
+
     android:layout_height="match_parent">
 
 
@@ -21,6 +23,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_my"
+        android:background="#D9D9D9"
+android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
