--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#D9D9D9"
     tools:context=".ui.frags.TimelineFragment">
 
 
@@ -23,6 +24,8 @@
 
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
+        android:background="#D9D9D9"
+
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"/>
 
