--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,64 +1,85 @@
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
 
+<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="3dp"
+
+    android:layout_margin="2dp"
+    android:layout_width="170dp"
+    android:layout_height="230dp"
+
+    android:background="@android:color/transparent">
+    <!-- LinearLayout with its own rounded corners -->
+<LinearLayout
+android:id="@+id/l1"
+android:layout_width="match_parent"
+android:layout_height="170dp"
+android:orientation="vertical"
+android:padding="5dp"
+android:gravity="center"
+android:background="@drawable/rounded_inner_card">  <!-- Custom background for rounded corners -->
+
+<!-- Item Image -->
+<ImageView
+    android:id="@+id/itemImage"
     android:layout_width="150dp"
+    android:layout_height="90dp"
+    android:scaleType="centerCrop"
+    android:src="@drawable/ic_launcher_foreground" />
+
+<!-- Item Title -->
+<TextView
+    android:id="@+id/itemTitle"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardElevation="9dp">
+    android:text="Item Title"
+    android:layout_gravity="start"
+    android:textSize="13sp"
+    android:textStyle="bold"
+    android:textColor="@color/black"
+    android:layout_marginTop="8dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="5dp"
-        android:gravity="center"
-        android:background="@color/white">
+<TextView
+    android:id="@+id/itemstatus"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Status: "
+    android:textSize="10sp"
+    android:layout_gravity="start"
+    android:textColor="#A0A0A0"
+    android:maxLines="1"
+    android:layout_marginTop="4dp"/>
 
-        <!-- Item Image -->
-        <ImageView
-            android:id="@+id/itemImage"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground" />
+<!-- Item Description -->
+<TextView
+    android:id="@+id/itemDescription"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Item description goes here..."
+    android:textSize="10sp"
+    android:layout_gravity="start"
+    android:textColor="#A0A0A0"
+    android:maxLines="2"
+    android:ellipsize="end"
+    android:layout_marginTop="4dp"/>
+</LinearLayout>
 
-        <!-- Item Title -->
-        <TextView
-            android:id="@+id/itemTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Item Title"
-            android:layout_gravity="start"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_marginTop="8dp"/>
+    <!-- Another RelativeLayout with rounded corners -->
+<RelativeLayout
+android:layout_below="@id/l1"
+android:layout_width="120dp"
+android:layout_alignParentRight="true"
+android:layout_height="40dp"
+    android:padding="5dp"
+android:background="@drawable/rounded_inner_card2">
 
-        <TextView
-            android:id="@+id/itemstatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Status: "
-            android:textSize="14sp"
-            android:layout_gravity="start"
+<ImageView
+    android:id="@+id/itemImag4"
+    android:layout_width="match_parent"
+    android:layout_height="65dp"
+    android:scaleType="centerCrop"
+    android:background="@drawable/rounded_inner_card2"
+    android:src="@drawable/whitebg"/>
 
-            android:textColor="#A0A0A0"
-            android:maxLines="1"
-            android:layout_marginTop="4dp"/>
-        <!-- Item Description -->
-        <TextView
-            android:id="@+id/itemDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Item description goes here..."
-            android:textSize="14sp"
-            android:layout_gravity="start"
+</RelativeLayout>
 
-            android:textColor="#A0A0A0"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:layout_marginTop="4dp"/>
-    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
