--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Lost_And_Found" parent="Theme.AppCompat.Light.NoActionBar" />
+    <style name="Theme.Lost_And_Found" parent="Theme.AppCompat.Light.NoActionBar" >
+    <item name="android:statusBarColor">@color/status_bar_color</item>
+    <item name="android:navigationBarColor">@color/nav_bar_color</item>
+    </style>
 </resources>
